--- a/webpage01/webpage.html
+++ b/webpage01/webpage.html
@@ -13,7 +13,7 @@
             <div class="nav">
                 <ul>
                     <li><a href="#">HOME</a></li> <!-- shortcut ul>li*5>a -->
-                    <li><a href="#">BEDROOM</a></li>
+                    <li><a href="#">BEDROOMS</a></li>
                     <li><a href="#">DINING</a></li>
                     <li><a href="#">KITCHEN</a></li>
                     <li><a href="#">BACKYARD</a></li>
