--- a/webpage02/webpage02.html
+++ b/webpage02/webpage02.html
@@ -153,9 +153,26 @@
 
 
 </section>
+<!--Call to action-->
+<section class = "cta">
+    <h1>enroll for our various online courses<br> anywhere from the world</h1>
+    <a href="" class = "hero-btn">Contact US</a>
+    
+</section>
+<!--Footer-->
+<section class = "footer">
+    <h4>About Us</h4>
+    <p>blahblahblahblahblahblahblahblahblahblah</p>
+    <div class="icons">
+        <i class="fa-brands fa-facebook"></i>
+        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-twitter"></i>
+    </div>
+    <p>Made by Harry</p>
+</section>
 <!--Javascript Toggle menu-->
     <script>
-        var navLinks = document.getElementById("navLinks")
+        let navLinks = document.getElementById("navLinks")
         function showMenu() {
             navLinks.style.right = "0";
         }
