google website and first commit for wordle

--- a/wordle_puzzle/index.html
+++ b/wordle_puzzle/index.html
@@ -22,7 +22,7 @@
     <input type="text" class="input">  
     <button>Submit</button>
 
-  <!--Checking the answer. Green if position and char is correct, yellow if only char is correct else grey-->   
+  <!--Checking the answer. Green if position and char is correct, yellow if only char is correct else grey.-->   
     <script>
         var ans = 'abcde';
         document.querySelector('button').addEventListener('click',
